# ECC-model

./: .gitignore  ECC_model sample runs.csv  ECC_model sample runs.xlsx  LICENSE  LPDDR6_fault_model.md  README.md  STATUS.md  pyproject.toml  requirements.txt
rust/: Cargo.toml
rust/src/: gf256.rs  lib.rs  rs.rs
src/ecc_model/: __init__.py  cli.py  core.py  fault_model.py  rs.py
tests/: test_decode_policy.py
